# Kmeans

./: CMakeLists.txt  main.cpp
Initialization/: initialPointsPlotter.py  initial_points.txt  real_centroids.txt
Kmeans/: Kluster.cpp  Kluster.h  KmeansInitializer.cpp  KmeansSequentialSolver.cpp  KmeansSequentialSolver.h  Point.h
Kmeans/parallelCUDA/: KmeansParallelCUDASolver.cpp  KmeansParallelCUDASolver.h
Kmeans/parallelOPENMP/: KmeansParallelOMPSolver.cpp  KmeansParallelOMPSolver.h
Kmeans/sequential/: KmeansSequentialSolver.cpp
Results/: ResultPlotter.py  clustered_points.txt
